# pywnedpasswords

./: .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  LICENSE  README.md  pwnedcheck.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py  test-requirements.txt
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: main.yml  zizmor.yml
pywnedpasswords/: __init__.py  pywnedpasswords.py
pywnedpasswords/tests/: __init__.py  test_pass.txt  test_pass_nofind.txt  test_pywnedpasswords.py
